# sensor_calibration

./: .clang-format  README.md  format.sh
.github/workflows/: ci.yml
calibration_common/: CMakeLists.txt  package.xml
calibration_common/include/calibration_common/: calibration_data.hpp  msg_utils.hpp  tic_toc.hpp
calibration_common/include/calibration_common/dummy_sensor/: dummy_camera_node.hpp  dummy_lidar_node.hpp
calibration_common/include/calibration_common/publisher/: cloud_publisher.hpp  image_publisher.hpp
calibration_common/include/calibration_common/subscriber/: cloud_subscriber.hpp  image_subscriber.hpp
calibration_common/launch/: dummy_sensors.launch.py
calibration_common/scripts/: calibration_client.py
calibration_common/src/: calibration_data.cpp  msg_utils.cpp  tic_toc.cpp
calibration_common/src/dummy_sensor/: dummy_camera_main.cpp  dummy_camera_node.cpp  dummy_lidar_main.cpp  dummy_lidar_node.cpp
calibration_common/src/publisher/: cloud_publisher.cpp  image_publisher.cpp
calibration_common/src/subscriber/: image_subscriber.cpp
calibration_interfaces/: CMakeLists.txt  package.xml
calibration_interfaces/msg/: CalibrationCommand.msg  CalibrationStatus.msg  CameraIntrinsicResult.msg  ExtrinsicResult.msg
camera_intrinsic_calibration/: CMakeLists.txt  README.md  package.xml
camera_intrinsic_calibration/config/: calibrator.yaml
camera_intrinsic_calibration/include/camera_intrinsic_calibration/: calibration_node.hpp  pinhole_calibrator.hpp
camera_intrinsic_calibration/launch/: demo.launch.py
camera_intrinsic_calibration/scripts/: calibration_client.py
camera_intrinsic_calibration/src/: calibration_main.cpp  calibration_node.cpp  pinhole_calibrator.cpp
doc/: calibration_file_format.md
