<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>camera_intrinsic_calibration</name>
  <version>0.1.0</version>
  <description>The camera_intrinsic_calibration package</description>
  <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>calibration_common</depend>
  <depend>calibration_interfaces</depend>
  <depend>libceres-dev</depend>
  <depend>sophus</depend>
 
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
